--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="jumbotron rounded-0">
         <div class="row">
-            <h1 class="col text-left">timeto.com</h1>
+            <h1 class="col text-left">timeto</h1>
             <code class="col text-right h1" id="time_to">0 min</code>
         </div>
     </div>
